--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global */
+@import "./styles/reset";
+@import "./styles/utilities";
+@import "./styles/typography";
+
+html {
+  color: $white;
+  background: $black;
+}
