--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,8 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  min-height: 100vh;
+  // adjust for iphone overlays, etc
+  min-height: calc(100vh - 60px);
 }
 .content {
   padding: 10px 5%;
