--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,6 +1,11 @@
+@import "_variables";
+
 html {
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 12px;
+    @include respond-to("mobile") {
+        font-size: 16px;
+    }
 }
 
 *, *:before, *:after {
